--- a/templates/table.html
+++ b/templates/table.html
@@ -9,11 +9,13 @@
         Pull requests
     </h1>
 
+    <!---
     <table align="center" border="1">
         <thead>
             <td>N</td>
             <td>Name</td>
             <td>author</td>
+            <td>author email</td>
             <td>link</td>
             <td>approvals</td>
             <td>created date</td>
@@ -29,4 +31,7 @@
             <td>-</td>
         </tr>
     </table>
+    --->
+
+    <p align='center'>{{ prs }}</p>
 </body>
